Fixed items align

--- a/src/index.css
+++ b/src/index.css
@@ -97,11 +97,15 @@ button:hover {
 .inner_wrapper {
   display: flex;
   flex-direction: column;
-  align-items: center;
-
 }
 
 @media(max-width: 520px) {
+
+  .inner_wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }  
 
   .wrapper {
     max-width: 320px;
